[package]
name = "advent-of-code"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7"
id_tree = "1.8"
nom = "7.1"
linked_hash_set = "0.1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"